--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -364,11 +364,11 @@ a:hover, summary:hover, .active {
   .bottom-nav ul li {
     margin: auto; }
 
-@media only screen and (max-width: 764px) {
+@media only screen and (max-width: 724px) {
   .bottom-nav {
     display: block; } }
 
-@media only screen and (max-device-width: 764px) {
+@media only screen and (max-device-width: 724px) {
   .uk-container {
     padding: 0px !important; }
   .top-nav {
@@ -543,7 +543,37 @@ a:hover, summary:hover, .active {
   border: 1px solid #D4D4D4;
   -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px; }
+  box-shadow: rgba(0, 0, 0, 0.12) 0 0px 12px;
+  /*ScrollBar*/
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */ }
+  .side-category .listCategory {
+    direction: rtl;
+    max-height: calc(100vh - 240px);
+    overflow-y: auto; }
+  .side-category ::-webkit-scrollbar {
+    width: 12px;
+    -moz-border-radius: 6px 8px 8px 6px;
+    -webkit-border-radius: 6px 8px 8px 6px;
+    border-radius: 6px 8px 8px 6px;
+    /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/ }
+  .side-category ::-webkit-scrollbar-track {
+    margin: 0 !important; }
+  .side-category ::-webkit-scrollbar-thumb {
+    background: #c4c4c4;
+    border-right: 0 !important;
+    -moz-border-radius: 6px 8px 8px 6px;
+    -webkit-border-radius: 6px 8px 8px 6px;
+    border-radius: 6px 8px 8px 6px;
+    /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/ }
+  .side-category ::-webkit-scrollbar-thumb:hover {
+    background: #b0b0b0; }
 
 .side-category-placeholder {
   width: 314px; }
@@ -1078,6 +1108,6 @@ select {
     .credits p a:hover {
       color: #F94646; }
 
-@media only screen and (max-width: 764px) {
+@media only screen and (max-width: 724px) {
   .credits {
     margin-bottom: 96px; } }
