--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -96,10 +96,24 @@
                 </a>
             </li>
             <li>
-                <a href="/User/Chat/Index" class="column">
-                    <span uk-icon="chat" class="uk-margin-auto"></span>
-                    <span>گفت و گو</span>
-                </a>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    if (User.IsInRole("user") || User.IsInRole("institution") || User.IsInRole("tutor"))
+                    {
+                        <a href="/User/Chat/Index" class="column">
+                            <span uk-icon="chat" class="uk-margin-auto"></span>
+                            <span>گفت و گو</span>
+                        </a>
+                    }
+                    if (User.IsInRole("admin"))
+                    {
+                        <a href="/Admin/Chat" class="column">
+                            <span uk-icon="chat" class="uk-margin-auto"></span>
+                            <span>گفت و گو</span>
+                        </a>
+                    }
+                }
+
             </li>
             <li>
                 <a href="#Modal-Category" uk-toggle class="column">
@@ -251,11 +265,11 @@
                         categories.forEach(i =>
                             list.innerHTML +=
                             `<li>
-                                                       <a id="${i}" href="javascript:openSubCategories('${i}');selectByCategory('${i}')">
-                                                          ${i}
-                                                       </a>
-                                                       <ul class="sub"></ul>
-                                                    </li>`
+                                                               <a id="${i}" href="javascript:openSubCategories('${i}');selectByCategory('${i}')">
+                                                                  ${i}
+                                                               </a>
+                                                               <ul class="sub"></ul>
+                                                            </li>`
                         );
                     }
                 });
@@ -267,11 +281,11 @@
                 categories.forEach(i => {
                     list.innerHTML +=
                         `<li>
-                                                   <a id="${i}" href="javascript:openSubCategories('${i}');selectByCategory('${i}')">
-                                                      ${i}
-                                                   </a>
-                                                   <ul class="sub"></ul>
-                                                </li>`
+                                                           <a id="${i}" href="javascript:openSubCategories('${i}');selectByCategory('${i}')">
+                                                              ${i}
+                                                           </a>
+                                                           <ul class="sub"></ul>
+                                                        </li>`
                 })
             }
         }
