--- a/AminWeb/Areas/User/Views/Classes/ShowCategory.cshtml
+++ b/AminWeb/Areas/User/Views/Classes/ShowCategory.cshtml
@@ -32,7 +32,7 @@
             }
             else {
                 var id = $(".showCategory option:selected").val();
-                $("#CatagoryId").val(id);
+                $("#CatagoryId").val("");
                 $('#playlist').html("");
             }
         });
