--- a/AminWeb/Views/Account/Register.cshtml
+++ b/AminWeb/Views/Account/Register.cshtml
@@ -54,7 +54,7 @@
             @Html.ValidationSummary(true, "", new { @class = "uk-text-danger" })
         </span>
     </div>
-    <label dir="rtl" class="uk-margin-small-top uk-text-danger"><input class="uk-checkbox" onchange="document.getElementById('btnRegister').toggleAttribute('disabled')" type="checkbox"> با قوانین و مقررات سایت موافق هستم</label>
+    <label dir="rtl" class="uk-margin-small-top uk-text-danger"><input class="uk-checkbox" onchange="document.getElementById('btnRegister').toggleAttribute('disabled')" type="checkbox"> <a href="/Home/Rules" style="color:red;">با قوانین و مقررات سایت موافق هستم</a></label>
 
 
     <div class="column center uk-margin-large-top">
