Index Category Refresh fix

--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -368,7 +368,7 @@
                         categories.forEach(i =>
                             list.innerHTML +=
                             `<li>
-                               <a id="${i}" href="javascript:openSubCategories('${i}');selectByCategory('${i}')">
+                               <a id="${i}" href="javascript:openSubCategories('${i}');">
                                   ${i}
                                </a>
                                <ul class="sub"></ul>
