--- a/AminWeb/Areas/User/Views/Video/Edit.cshtml
+++ b/AminWeb/Areas/User/Views/Video/Edit.cshtml
@@ -33,7 +33,7 @@
             <div class="row-reverse text-center">
                 @if (Model.MainImage != null)
                 {
-                    <img src="~/Resources/Video/Image/@Model.MainImage" class="uk-margin-small-bottom" alt="" />
+                    <img src="~/Resources/Video/Image/@Model.MainImage" id="imgAvatar" class="uk-margin-small-bottom" alt="" />
                 }
             </div>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
@@ -53,7 +53,7 @@
             <div class="row-reverse text-center">
                 @if (Model.VideoDemoUrl != null)
                 {
-                    <video class="uk-margin-small-bottom" controls controlsList="nodownload">
+                    <video class="uk-margin-small-bottom" id="videoDemo" controls controlsList="nodownload">
                         <source src="~/Resources/Video/VideoDemo/@Model.VideoDemoUrl" type="video/mp4">
                     </video>
                 }
@@ -76,7 +76,7 @@
             <div class="row-reverse text-center">
                 @if (Model.VideoUrl != null)
                 {
-                    <video class="uk-margin-small-bottom" controls controlsList="nodownload">
+                    <video class="uk-margin-small-bottom" id="video" controls controlsList="nodownload">
                         <source src="~/Resources/Video/VideoUrl/@Model.VideoUrl" type="video/mp4">
                     </video>
                 }
@@ -152,7 +152,66 @@
 
 </div>
 <script>
+    function uploadFile() {
+        UIkit.notification('فایل مورد نظر اضافه شد');
 
+    }
+    function readURL(input) {
+
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#imgAvatar').attr('src', e.target.result);
+                uploadFile();
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#MainImage").change(function () {
+        readURL(this);
+    });
+
+    function readURLDemo(input) {
+        $("#videoDemo").css("display", "block");
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#videoDemo').attr('src', e.target.result);
+                uploadFile();
+
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#VideoDemoUrl").change(function () {
+        readURLDemo(this);
+    });
+
+
+    function readURLVideo(input) {
+        $("#video").css("display", "block");
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function (e) {
+                $('#video').attr('src', e.target.result);
+                uploadFile();
+
+            }
+
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    $("#VideoUrl").change(function () {
+        readURLVideo(this);
+    });
 
     $(document).ready(function () {
         $.get('/User/Video/ShowPlaylist/' + @Model.CatagoryId, function (result) {
